# JackAndTreeGame

./: .gitignore  CMakeLists.txt  Dockerfile  JTGame  LICENSE  Makefile  README.md  build.sh  docker-compose.yml  note.txt
Game-Linux/: Game
JackAndTree-Linux/: Game
cmake/: linux-toolchain.cmake  win-toolchain.cmake
docker/: Dockerfile  docker-compose.yml  readme.txt
include/: common.hpp  game_manager.hpp  gamemanager.hpp  main.hpp  player.hpp  stage.hpp  structs.hpp  ui.hpp  utility.hpp
sample/: clear  clear.cpp  snake.cpp  test
src/: game_manager.cpp  main.cpp  player.cpp  stage.cpp  ui.cpp
